branding: rename app from BrainScore to BrainrotAI
SCOPE: UI-Text changes only, no code/logic/schema changes

CHANGED FILES:
- src/routes/+page.svelte: Landing page title
- src/routes/auth/+page.svelte: Login page title + logo
- src/routes/dashboard/+page.svelte: Dashboard title + footer
- src/routes/onboarding/+page.svelte: Page title
- src/lib/components/onboarding/OnboardingWelcome.svelte: Welcome text
- src/lib/components/onboarding/OnboardingForm.svelte: Form label
- src/app.html: Meta title + Apple Web App title
- vite.config.ts: PWA manifest name/short_name

PRESERVED (Score references):
- 'Dein aktueller BrainScore' (CurrentScoreCard.svelte)
- 'BrainScore' label in SartResult.svelte
- 'Was ist BrainScore?' explanation (refers to the score metric)
- Code comments, package.json (technical names)

RESULT:
- App is now branded as 'BrainrotAI'
- Score metric still called 'BrainScore'
- Consistent across all user-facing text

--- a/src/app.html
+++ b/src/app.html
@@ -6,13 +6,13 @@
     <meta name="theme-color" content="#1e293b" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="BrainScore" />
+    <meta name="apple-mobile-web-app-title" content="BrainrotAI" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
     <link rel="apple-touch-startup-image" href="/icon-512.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
-    <title>BrainScore - Cognitive Performance Testing</title>
+    <title>BrainrotAI - Cognitive Performance Testing</title>
     <style>
       /* Prevent any accidental navigation that breaks PWA mode */
       html { 
