fix: iOS PWA fullscreen and mobile session history layout
iOS PWA Fullscreen Fix:
- Change apple-mobile-web-app-status-bar-style from 'black-translucent' to 'default'
- Add display-mode: standalone CSS media query for safe-area handling
- Prevent URL bar visibility in iOS PWA mode
- Add overflow-x hidden to prevent horizontal scroll issues

Mobile Session History Optimization:
- Redesign card layout for better mobile display
- Make score badge more compact (badge-lg instead of full text)
- Stack elements vertically with flex-start alignment
- Reduce emoji size (w-10 h-10 instead of w-12 h-12)
- Better spacing for small screens (p-3 instead of p-4)
- Optimize CE/OE display with smaller text (text-xs)

This fixes the URL bar visibility issue when app is opened from iOS home screen
and improves readability of test history on mobile devices.

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="BrainrotAI" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
@@ -18,6 +18,19 @@
       html { 
         touch-action: manipulation;
         -webkit-touch-callout: none;
+      }
+      /* iOS PWA: Ensure full viewport usage */
+      html, body {
+        overflow-x: hidden;
+        position: relative;
+        width: 100%;
+      }
+      /* Hide URL bar on iOS PWA */
+      @media all and (display-mode: standalone) {
+        body {
+          padding-top: constant(safe-area-inset-top);
+          padding-top: env(safe-area-inset-top);
+        }
       }
     </style>
     %sveltekit.head%
