Complete design overhaul, onboarding wizard & digital check-in system
- Design system: Inter font, purple theme (#7C3AED), Material Icons, rounded corners
- Onboarding: Complete 5-step wizard (Goals, Contexts, Time Config, ICS download)
- Digital check-in: MVP categorical screentime tracking (3 questions, no text input)
- Style refinement: Removed all emojis, font-black headlines, proper input styling
- Animations: Button click feedback (scale, shadow), smooth transitions
- Layout fixes: Digital check-in width, footer contrast, centered layouts
- SART validation: Confirmed 100% compliance with specification (60 trials, 500ms+900ms, 7-8 No-Go)
- Database: digital_logs migration ready (categories, RLS policies, constraints)

--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-startup-image" href="/icon-512.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" rel="stylesheet">
     <title>BrainrotAI - Cognitive Performance Testing</title>
     <style>
       /* Prevent any accidental navigation that breaks PWA mode */
@@ -35,7 +37,7 @@
     </style>
     %sveltekit.head%
   </head>
-  <body>
+  <body data-theme="brainscore" class="font-sans">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
